# voronoi

./: .gitignore  Cargo.toml
fortunes/: Cargo.toml
fortunes/src/: beachline.rs  geometry.rs  lib.rs  test_utils.rs
visualization/: Cargo.toml  index.html
visualization/src/: main.rs
voronoi/: Voronoi.lean  lake-manifest.json  lakefile.lean
voronoi/Voronoi/: Basic.lean
