[package]
name = "visualization"
version = "0.1.0"
edition = "2021"

[dependencies]
fortunes = { path = "../fortunes" }
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "CanvasRenderingContext2d",
    "Window",
] }
ordered-float = "4.2.0"
